--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript">
 
 		var MatrixChars = false;
-		var fps;
+		var fps = 25;
 		var fpsInterval;
 		var mcolor = '#0F0';
 
@@ -56,10 +56,14 @@
 		}
 
 		window.onload = function () {
-			window.wallpaperPropertyListener = {
+			console.log('window.onload');
+			
+			startAnimating();
+			
+			/*window.wallpaperPropertyListener = {
 			    applyUserProperties: function(properties) 
 			    {					
-		            /*if (properties.custombool.value) 
+		            if (properties.custombool.value) 
 		            {
 		                window.MatrixChars = true;
 		                window.fps = properties.customint.value;
@@ -68,13 +72,15 @@
 		            {
 		                window.MatrixChars = false;
 		                window.fps = properties.customint.value;
-		            }*/
+		            }
 					
 					window.MatrixChars = false;
 		            window.fps = 25;
 					window.mcolor = '#0F0';
+					
+					console.log('Setting properties');
 
-		            /*if(properties.customcombo.value == 1) {
+		            if(properties.customcombo.value == 1) {
 		            	window.mcolor = '#0F0';
 		            }
 
@@ -88,12 +94,12 @@
 
 		            if(properties.customcombo.value == 4) {
 		            	window.mcolor = '#ffffff';	
-		            }*/
+		            }
 
 
 		            startAnimating();
 			    }
-			};
+			};*/
 		};
 
 
