--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		ctx.font = font_size + "px arial";	
 		
 		c.height = window.innerHeight;
-		c.width = window.innerWidth;
+		c.width = 8000;
 		
 		var letters = "1234567890#ABCDEFGHIJKLMNOPQRSTUVWXYZ";		
 		letters = letters.split('');
